--- a/predict_avocado_type.ipynb
+++ b/predict_avocado_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "[18249 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
        "          1.20141500e+04,   1.19881400e+04,   2.60100000e+01]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,16 +1349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, ..., 1, 1, 1], dtype=object)"
+       "array([0, 0, 0, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1414,53 +1414,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "#clf = SGDClassifier(loss=\"hinge\", max_iter=1000)\n",
-    "clf = SVC(random_state=0)\n",
+    "clf = LogisticRegression(random_state=0, penalty='l1', C=10)\n",
+    "#clf = SVC(random_state=0)\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "clf = SGDClassifier(loss=\"hinge\", max_iter=1000)\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_pred = clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "平均予測精度 : 0.9398148148148148\n",
+      "平均予測精度 : 0.9529320987654321\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "conventional       0.97      0.91      0.94       648\n",
-      "     organic       0.91      0.97      0.94       648\n",
+      "conventional       0.99      0.91      0.95       648\n",
+      "     organic       0.92      0.99      0.95       648\n",
       "\n",
-      " avg / total       0.94      0.94      0.94      1296\n",
+      " avg / total       0.96      0.95      0.95      1296\n",
       "\n"
      ]
     }
@@ -1474,11 +1459,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best cross-validation accuracy: 0.92\n",
+      "Train set score: 0.93\n",
+      "Best parameters : {'LR__C': 10, 'LR__class_weight': None, 'LR__penalty': 'l1'}\n"
+     ]
+    }
+   ],
    "source": [
     "# group 10-fold cross validation\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -1490,11 +1483,11 @@
     "n = X_train.shape[1]\n",
     "\n",
     "#標準化と学習のパイプライン\n",
-    "pipe = Pipeline([('scaler',StandardScaler()),(\"svm\",SVC(random_state=0))])\n",
+    "pipe = Pipeline([('scaler',StandardScaler()),(\"LR\",LogisticRegression(random_state=0))])\n",
     "pipe.fit(X_train,y_train)\n",
     "\n",
     "#パラメータは10^nオーダーで変化させる\n",
-    "params = {'svm__C':[0.01,0.1,1,10],'svm__gamma':[1/n,0.01,0.1,1,10],'svm__class_weight':[None,'balanced']}\n",
+    "params = {'LR__C':[0.01,0.1,1,10],'LR__penalty':['l1', 'l2'],'LR__class_weight':[None,'balanced']}\n",
     "\n",
     "#グリッドサーチ\n",
     "grid = GridSearchCV(pipe, param_grid = params, cv = 5, scoring='accuracy',n_jobs=10)\n",
@@ -1504,6 +1497,15 @@
     "print('Train set score: {:.2f}'.format(grid.score(X_train,y_train)))\n",
     "print('Best parameters : {}'.format(grid.best_params_))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
