--- a/predict_avocado_type.ipynb
+++ b/predict_avocado_type.ipynb
@@ -167,9 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best cross-validation accuracy: 0.93\n",
+      "Train set score: 0.94\n",
+      "Best parameters : {'LR__penalty': 'l2', 'LR__class_weight': 'balanced', 'LR__C': 100000}\n"
+     ]
+    }
+   ],
    "source": [
     "# group 10-fold cross validation\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -198,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "平均予測精度 : 0.9591049382716049\n",
+      "平均予測精度 : 0.96\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -239,13 +249,6 @@
     "print('平均予測精度 : {:.2f}\\n'.format(clf.score(X_test, y_test)))\n",
     "print(classification_report(y_test, y_pred, target_names=['conventional','organic']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
