--- a/predict_avocado_type.ipynb
+++ b/predict_avocado_type.ipynb
@@ -55,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#説明変数を以下のカラムとする\n",
     "exp_col = ['AveragePrice', \n",
     "                   'Total Volume', \n",
     "                   '4046', \n",
@@ -123,6 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2017以前のデータを使って2018年のデータを予測する\n",
     "traindf = df.loc[:'2017',:]\n",
     "testdf  = df.loc['2018':,:]"
    ]
@@ -133,6 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#訓練データとテストデータから説明変数と目的変数を分離する\n",
     "X_train = traindf.loc[:'2017',exp_col].values\n",
     "y_train = traindf.loc[:'2017',obj_col].values\n",
     "\n",
@@ -162,6 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#今回はロジスティック回帰モデルを使う\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
   },
@@ -181,10 +185,9 @@
     }
    ],
    "source": [
-    "# group 10-fold cross validation\n",
+    "# 5-fold cross validation\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import GroupKFold\n",
     "\n",
@@ -212,8 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn.svm import SVC\n",
-    "#from sklearn.linear_model import SGDClassifier\n",
+    "#最適化したパラメータで学習する\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "clf = LogisticRegression(random_state=0, penalty='l2', C=100000, class_weight='balanced')\n",
